--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,19 @@
 {
   "compilerOptions": {
-    /* Básicos */
-    "target": "es2017",                   // Soporte ES2017
-    "module": "commonjs",                 // Módulo CommonJS (ideal para Node)
-    "outDir": "./dist",                   // Carpeta de salida
-    "rootDir": "./src",                   // Carpeta raíz del código fuente
-    
-    /* Módulos */
-    "esModuleInterop": true,              // Para usar imports con módulos CommonJS
-    "moduleResolution": "node",           // Resolución estándar para módulos node
-    
-    /* Reglas de seguridad */
-    "strict": true,                       // Modo estricto activado (recomendado)
-    "skipLibCheck": true,                 // Omite revisión de tipos en node_modules
-    "forceConsistentCasingInFileNames": true, // Respeta mayúsculas/minúsculas en importaciones
-    
-    /* Soporte para types personalizados */
+    "target": "es2017",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "typeRoots": ["./src/types", "./node_modules/@types"],
-
-    /* Tipos incluidos globalmente si los necesitaras (opcional) */
     "types": ["node", "express"]
   },
   "include": [
-    "src/**/*"  // Incluye todo lo que esté en src, incluyendo tus types extendidos
+    "src/**/*"
   ],
   "exclude": [
     "node_modules", 
